--- a/docs/source/examples/_colab_glycosylate_protein.ipynb
+++ b/docs/source/examples/_colab_glycosylate_protein.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Glycosylating a protein\n",
     "\n",
-    "In this tutorial we will glycosylate a protein scaffold with a glycan. We will use part of the HIV-1 enevellope protein 4TVP which is heavily glycosylated. We will attach a Mannose 9 glycan to some of it's N-glycosylation sites."
+    "In this Colab Notebook we will explore an example case where we glycosylate a protein. We will use part of the HIV-1 envelope protein 4TVP which is heavily glycosylated. Here we will attach a Mannose 9 glycan to some of it's N-glycosylation sites."
    ]
   },
   {
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glycosylator as gl"
+    "import glycosylator as gl\n",
+    "import requests"
    ]
   },
   {
@@ -33,6 +34,25 @@
    "metadata": {},
    "source": [
     "First we load the protein scaffold and the glycan from a PDB file. We can of course make the glycan live, but we happen to have it as a PDB already."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "\n",
+    "protein_url = \"https://github.com/ibmm-unibe-ch/glycosylator/blob/main/docs/source/examples/files/4tvp.prot.pdb\"\n",
+    "response = requests.get(protein_url)\n",
+    "with open(\"./protein.pdb\", \"w\") as file:\n",
+    "    file.write(response.text)\n",
+    "\n",
+    "glycan_url = \"https://github.com/ibmm-unibe-ch/glycosylator/blob/main/docs/source/examples/files/man9.pdb\"\n",
+    "response = requests.get(glycan_url)\n",
+    "with open(\"./glycan.pdb\", \"w\") as file:\n",
+    "    file.write(response.text)"
    ]
   },
   {
@@ -62,12 +82,13 @@
     }
    ],
    "source": [
-    "protein = gl.protein(\"./files/4tvp.prot.pdb\")\n",
-    "protein.reindex()\n",
+    "# load the protein\n",
+    "protein = gl.protein(\"./protein.pdb\")\n",
+    "protein.reindex() # reindexing the atoms is usually a good idea to avoid problems\n",
     "\n",
     "# # and now we get the glycan to attach\n",
-    "glycan = gl.glycan(\"./files/man9.pdb\")\n",
-    "glycan.infer_glycan_tree()\n",
+    "glycan = gl.glycan(\"./glycan.pdb\")\n",
+    "glycan.infer_glycan_tree() # so we can visualize as SNFG\n",
     "glycan.snfg()"
    ]
   },
@@ -96,7 +117,10 @@
     "# (this will return a dictionary with lists of residues in each chain)\n",
     "sites = protein.find_n_linked_sites()\n",
     "\n",
-    "print(sites)"
+    "for chain, residues in sites.items():\n",
+    "    print(chain)\n",
+    "    for r in residues:\n",
+    "        print(\"  -\", r)"
    ]
   },
   {
@@ -123,7 +147,7 @@
     }
    ],
    "source": [
-    "# get the sites to glycosylate\n",
+    "# get some sites to glycosylate\n",
     "sites = sites[protein.get_chain(\"A\")][:2] + sites[protein.get_chain(\"B\")][:2]\n",
     "\n",
     "# since we need information about the connectivity of the target amino acids we must\n",
@@ -283,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Glycosylator can be used seemlessly within BuildAMol's optimization framework to improve the glycan conformations. Be sure to check out the BuildAMol tutorial on optimization there to get more details if you are interested! In short, to optimize structures we need to perform four steps: \n",
+    "Glycosylator can be used seemlessly within BuildAMol's optimization framework to improve the glycan conformations. Be sure to check out the [BuildAMol tutorial on optimization](https://biobuild.readthedocs.io/en/latest/examples/optimization.html) to get more details if you are interested! In short, to optimize structures we need to perform four steps: \n",
     "\n",
     "(1) make a graph representation of the molecule to optimize and choose bonds to rotate around in order to optimize the conformation\n",
     "\n",
