--- a/docs/source/examples/glycosylate_protein.ipynb
+++ b/docs/source/examples/glycosylate_protein.ipynb
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Glycosylator can be used seemlessly within BuildAMol's optimization framework to improve the glycan conformations. Be sure to check out the BuildAMol tutorial on optimization there to get more details if you are interested! In short, to optimize structures we need to perform four steps: \n",
+    "Glycosylator can be used seemlessly within BuildAMol's optimization framework to improve the glycan conformations. Be sure to check out the [BuildAMol tutorial on optimization](https://biobuild.readthedocs.io/en/latest/examples/optimization.html) to get more details if you are interested! In short, to optimize structures we need to perform four steps: \n",
     "\n",
     "(1) make a graph representation of the molecule to optimize and choose bonds to rotate around in order to optimize the conformation\n",
     "\n",
@@ -503,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
