update colab example

--- a/docs/source/examples/_colab_glycosylate_protein.ipynb
+++ b/docs/source/examples/_colab_glycosylate_protein.ipynb
@@ -88,7 +88,6 @@
     "\n",
     "# # and now we get the glycan to attach\n",
     "glycan = gl.glycan(\"./glycan.pdb\")\n",
-    "glycan.infer_glycan_tree() # so we can visualize as SNFG\n",
     "glycan.snfg()"
    ]
   },
@@ -509,8 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_to_optimize.to_pdb(\"./files/protein_optimized.pdb\")\n",
-    "protein_to_optimize.save(\"./files/protein_optimized.pkl\")"
+    "protein_to_optimize.to_pdb(\"./files/protein_optimized.pdb\")"
    ]
   },
   {
