update colab example

--- a/docs/source/examples/_colab_glycosylate_protein.ipynb
+++ b/docs/source/examples/_colab_glycosylate_protein.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# install glycosylator to Colab\n",
-    "!pip install glycosylator"
+    "!pip install glycosylator rdkit py3dmol"
    ]
   },
   {
@@ -44,12 +44,12 @@
    "source": [
     "%%capture\n",
     "\n",
-    "protein_url = \"https://github.com/ibmm-unibe-ch/glycosylator/blob/main/docs/source/examples/files/4tvp.prot.pdb\"\n",
+    "protein_url = \"https://raw.githubusercontent.com/ibmm-unibe-ch/glycosylator/main/docs/source/examples/files/4tvp.prot.pdb\"\n",
     "response = requests.get(protein_url)\n",
     "with open(\"./protein.pdb\", \"w\") as file:\n",
     "    file.write(response.text)\n",
     "\n",
-    "glycan_url = \"https://github.com/ibmm-unibe-ch/glycosylator/blob/main/docs/source/examples/files/man9.pdb\"\n",
+    "glycan_url = \"https://raw.githubusercontent.com/ibmm-unibe-ch/glycosylator/main/docs/source/examples/files/man9.pdb\"\n",
     "response = requests.get(glycan_url)\n",
     "with open(\"./glycan.pdb\", \"w\") as file:\n",
     "    file.write(response.text)"
@@ -83,11 +83,11 @@
    ],
    "source": [
     "# load the protein\n",
-    "protein = gl.protein(\"./protein.pdb\")\n",
+    "protein = gl.Protein.from_pdb(\"protein.pdb\")\n",
     "protein.reindex() # reindexing the atoms is usually a good idea to avoid problems\n",
     "\n",
     "# # and now we get the glycan to attach\n",
-    "glycan = gl.glycan(\"./glycan.pdb\")\n",
+    "glycan = gl.Glycan.from_pdb(\"glycan.pdb\")\n",
     "glycan.snfg()"
    ]
   },
@@ -290,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein.to_pdb(\"./files/protein_glycosylated.pdb\")"
+    "protein.to_pdb(\"protein_glycosylated.pdb\")"
    ]
   },
   {
@@ -508,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_to_optimize.to_pdb(\"./files/protein_optimized.pdb\")"
+    "protein_to_optimize.to_pdb(\"protein_optimized.pdb\")"
    ]
   },
   {
