add more colab notebooks

--- a/docs/source/examples/_colab_glycosylate_protein.ipynb
+++ b/docs/source/examples/_colab_glycosylate_protein.ipynb
@@ -15,6 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture \n",
+    "\n",
     "# install glycosylator to Colab\n",
     "!pip install glycosylator rdkit py3dmol"
    ]
@@ -26,7 +28,7 @@
    "outputs": [],
    "source": [
     "import glycosylator as gl\n",
-    "import requests"
+    "gl.visual.set_backend(\"py3dmol\")"
    ]
   },
   {
@@ -43,6 +45,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
+    "import requests\n",
     "\n",
     "protein_url = \"https://raw.githubusercontent.com/ibmm-unibe-ch/glycosylator/main/docs/source/examples/files/4tvp.prot.pdb\"\n",
     "response = requests.get(protein_url)\n",
@@ -199,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And there are our five glycans attached to chain A! We can also look at the 3D conformation. Let's use `py3dmol` for this one!"
+    "And there are our five glycans attached to chain A! We can also look at the 3D conformation."
    ]
   },
   {
@@ -274,7 +277,7 @@
     }
    ],
    "source": [
-    "protein.py3dmol().show()"
+    "protein.show3d()"
    ]
   },
   {
